--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8" />
     <title>Air Traffic Test v1.1</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Sunflower:300" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="build/index.css" />
   </head>
   <body>
     <div id="container">
-
+      <h1>Air Traffic</h1>
     </div>
     <script src="build/bundle.js"></script>
   </body>
