Added error handling

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <div id="shadow" class="shadow-off"></div>
     <div id="container">
       <h1>Air Traffic</h1>
+      <div id="error"></div>
       <div id="modal" class="modal-closed">
         <div id="box">
           <div id="image-div">
