Fetch data every minute

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
           <button id="modal-close">CLOSE</button>
         </div>
       </div>
+      <div id="list"></div>
     </div>
     <script src="build/bundle.js"></script>
   </body>
